[tool.poetry]
name = "hrxmlpy"
version = "0.1.0"
description = ""
authors = ["russellmyers <flipside@netspace.net.au>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.26.0"
pandas = "1.1.4"
scikit-learn = "0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
